index,text,press,news,rev start

--- a/assets/src/text.html
+++ b/assets/src/text.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<!--LAYOUT-->
-	<div class="layout">
+	<div class="layout m-default">
 		//= template/header.html
 		<main class="page-content workarea">
 			<div class="page-pre">
@@ -249,6 +249,6 @@
 
 	<script src="js/libs/libs.min.js"></script>
 	<script src="js/interface.js"></script>
-	<!-- <script src="js/pages.js"></script> -->
+	<script src="js/pages.js"></script>
 </body>
 </html>
