--- a/assets/src/press.html
+++ b/assets/src/press.html
@@ -31,12 +31,12 @@
 				<!-- content-part -->
                     <div class="h-tabs">
                         <ul>
-                            <li><a href="#tab-1">Пресс релизы</a></li>
-                            <li><a href="#tab-2">Презентация</a></li>
-                            <li><a href="#tab-3">Скачать</a></li>
+                            <li><a href="#press-1">Пресс релизы</a></li>
+                            <li><a href="#press-2">Презентация</a></li>
+                            <li><a href="#press-3">Скачать</a></li>
                         </ul>
                 
-                        <div id="tab-1">
+                        <div id="press-1">
                             <div class="press-list">
                                 <div class="press-item">
                                     <div class="press__wrap">
@@ -97,7 +97,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div id="tab-2">
+                        <div id="press-2">
                             <div class="press-list">
                                 <div class="press-item">
                                     <div class="press__wrap">
@@ -120,7 +120,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div id="tab-3">
+                        <div id="press-3">
                             <div class="press-list">
                                 <div class="press-item">
                                     <div class="press__wrap">
