--- a/assets/src/reviews.html
+++ b/assets/src/reviews.html
@@ -29,7 +29,54 @@
 			<div class="container-fluid">
 				<!-- content-part -->
                     <div class="reviews">
-                        dd
+                        <div class="reviews__item">
+							<div class="reviews__in">
+								<div class="reviews__title">
+									Алексей,<br>
+									ООО «АЛЕКС-ТРАНСФЕР»
+								</div>
+								<div class="reviews__info">
+									Дмитрий — Все очень доходчиво и профессионально объяснил.
+								</div>
+								<a href="" class="reviews__link">Прочитать отзыв</a>
+							</div>
+						</div>
+						<div class="reviews__item">
+							<div class="reviews__in">
+								<div class="reviews__title">
+									Артем, ООО ПКО<br> 
+									"Химстройинжиниринг"
+								</div>
+								<div class="reviews__info">
+									Профессиональный менеджер, максимально полно и подробно проконсультировали.
+								</div>
+								<a href="" class="reviews__link">Прочитать отзыв</a>
+							</div>
+						</div>
+						<div class="reviews__item">
+							<div class="reviews__in">
+								<div class="reviews__title">
+									Алексей,<br>
+									ООО «АЛЕКС-ТРАНСФЕР»
+								</div>
+								<div class="reviews__info">
+									Дмитрий — Все очень доходчиво и профессионально объяснил.
+								</div>
+								<a href="" class="reviews__link">Прочитать отзыв</a>
+							</div>
+						</div>
+						<div class="reviews__item">
+							<div class="reviews__in">
+								<div class="reviews__title">
+									Артем, ООО ПКО<br> 
+									"Химстройинжиниринг"
+								</div>
+								<div class="reviews__info">
+									Профессиональный менеджер, максимально полно и подробно проконсультировали.
+								</div>
+								<a href="" class="reviews__link">Прочитать отзыв</a>
+							</div>
+						</div>
                     </div>
 
                     <div class="paging">
